--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
 <body>
     <div id="calculator-container">
 
-        <div id="display">
-         999
-        </div>
+        <div id="display"></div>
 
         <div id="buttons-container">
             <button class="btn-number">1</button>
             <button class="btn-number">2</button>
             <button class="btn-number">3</button>
             <button class="btn-operator">+</button>
+
             <button class="btn-number">4</button>
             <button class="btn-number">5</button>
             <button class="btn-number">6</button>
             <button class="btn-operator">-</button>
+
             <button class="btn-number">7</button>
             <button class="btn-number">8</button>
             <button class="btn-number">9</button>
             <button class="btn-operator">x</button>
+
             <button class="btn-clear">AC</button>
-            <button class="btn-number">0</button>
+            <button class="btn-number zero">0</button>
+            <button class="btn-number dot">.</button>
             <button class="btn-equals">=</button>
             <button class="btn-operator">/</button>
         </div>
